// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mergeProps return deleteComment when creator 1`] = `
Object {
  "canModerate": true,
  "comment": Object {
    "id": 34,
  },
  "deleteComment": [Function],
  "isCreator": true,
  "removeComment": null,
}
`;

exports[`mergeProps returns nothing when neither creator nor moderator 1`] = `
Object {
  "canModerate": false,
  "comment": Object {
    "id": 34,
  },
  "deleteComment": null,
  "isCreator": false,
  "removeComment": null,
}
`;

exports[`mergeProps returns removeComment when moderator 1`] = `
Object {
  "canModerate": true,
  "comment": Object {
    "id": 34,
  },
  "deleteComment": null,
  "removeComment": [Function],
}
`;
